--- a/show_addrecord.html
+++ b/show_addrecord.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title>Add a Record</title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	</head>
 	<body>
-		<h1>Adding a Record to my_music</h1>			
+		<h1>Add a Contact</h1>			
 		<form method="POST" action="do_addrecord.php">
 			<table cellspacing=3 cellpadding=3>
 				<tr>
@@ -50,6 +51,7 @@
 				<tr>
 					<td valign=top colspan=2 align=center>
 						<p><input type="SUBMIT" name="submit" value="Add Record"></p>
+						<a href="index.html">Back</a>
 					</td>
 				</tr>
 			</table>
