--- a/show_download.html
+++ b/show_download.html
@@ -2,6 +2,7 @@
 <html lang="en">
  
     <head>
+            <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
     
     <body>
@@ -16,7 +17,7 @@
 
             </fieldset>
         </form>
-        <p><a href="menu.html">Return to Menu</a></p>
+        <p><a href="index.html">Back</a></p>
     </body>
  
 </html>
