--- a/show_upload.html
+++ b/show_upload.html
@@ -2,6 +2,7 @@
 <html lang="en">
  
     <head>
+            <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
     
     <body>
